--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -10,3 +10,19 @@ spring.rabbitmq.routing_key=JOB_TRAINING_ROUTING_KEY
 
 spring.kafka.host=172.20.134.249
 spring.kafka.port=9092
+spring.kafka.topic_init = 'topic_model_init'
+spring.kafka.topic_training = 'topic_model_training'
+spring.kafka.topic_validation = 'topic_model_validation'
+spring.kafka.topic_end = 'topic_model_end'
+
+spring.redis.host=172.20.134.249
+spring.redis.port=6379
+
+spring.data.mongodb.host=172.20.134.249
+spring.data.mongodb.port=27017
+spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.username=admin
+spring.data.mongodb.password=admin
+spring.data.mongodb.database=spring_mongo
+spring.data.mongodb.auto-index-creation=true
+spring.mongodb.model_result.page_size=20
