[add] service receive kafka + save to redis

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -17,6 +17,12 @@ spring.kafka.topic_end = 'topic_model_end'
 
 spring.redis.host=172.20.134.249
 spring.redis.port=6379
+spring.redis.prefix.set_model_running='model_running_set'
+spring.redis.prefix.model_param='model_param'
+spring.redis.prefix.model_info='model_info'
+spring.redis.prefix.model_train='model_train'
+spring.redis.prefix.model_validation='model_validation'
+
 
 spring.data.mongodb.host=172.20.134.249
 spring.data.mongodb.port=27017
