--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -22,6 +22,7 @@ spring.redis.prefix.model_param='model_param'
 spring.redis.prefix.model_info='model_info'
 spring.redis.prefix.model_train='model_train'
 spring.redis.prefix.model_validation='model_validation'
+spring.redis.model_training.page_size=5
 
 
 spring.data.mongodb.host=172.20.134.249
