--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -33,3 +33,6 @@ spring.data.mongodb.password=admin
 spring.data.mongodb.database=spring_mongo
 spring.data.mongodb.auto-index-creation=true
 spring.mongodb.model_result.page_size=20
+
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
