--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -24,7 +24,6 @@ spring.redis.prefix.model_train='model_train'
 spring.redis.prefix.model_validation='model_validation'
 spring.redis.model_training.page_size=5
 
-
 spring.data.mongodb.host=172.20.134.249
 spring.data.mongodb.port=27017
 spring.data.mongodb.authentication-database=admin
@@ -36,3 +35,15 @@ spring.mongodb.model_result.page_size=20
 
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
+
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/orchestrator
+spring.datasource.username=admin
+spring.datasource.password=admin
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+spring.security.secret='SECRET_KEY_VALUE'
+spring.security.cookie='ORCHESTRATOR_COOKIE'
