--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -24,13 +24,7 @@ spring.redis.prefix.model_train='model_train'
 spring.redis.prefix.model_validation='model_validation'
 spring.redis.model_training.page_size=5
 
-spring.data.mongodb.host=172.20.134.249
-spring.data.mongodb.port=27017
-spring.data.mongodb.authentication-database=admin
-spring.data.mongodb.username=admin
-spring.data.mongodb.password=admin
-spring.data.mongodb.database=spring_mongo
-spring.data.mongodb.auto-index-creation=true
+spring.data.mongodb.uri=mongodb://admin:admin@172.20.134.249:27017/spring_mongo
 spring.mongodb.model_result.page_size=20
 
 springdoc.api-docs.path=/api-docs
