[add] api download model weights

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -25,6 +25,7 @@ spring.redis.prefix.model_validation='model_validation'
 spring.redis.model_training.page_size=5
 
 spring.data.mongodb.uri=mongodb://admin:admin@172.20.134.249:27017/spring_mongo
+spring.mongodb.download_collection='mongo_save_model'
 spring.mongodb.model_result.page_size=20
 
 springdoc.api-docs.path=/api-docs
