[add] python save model to mongodb after train

--- a/worker/config.ini
+++ b/worker/config.ini
@@ -13,3 +13,11 @@ topic_init = 'topic_model_init'
 topic_training = 'topic_model_training'
 topic_validation = 'topic_model_validation'
 topic_end = 'topic_model_end'
+
+[mongodb]
+host = 172.20.134.249
+port = 27017
+username = admin
+password = admin
+database = spring_mongo
+collection = mongo_save_model
