--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -38,7 +38,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 spring.security.secret='SECRET_KEY_VALUE'
 spring.security.cookie='ORCHESTRATOR_COOKIE'
+
+server.port=8090
