--- a/server/src/test/resources/application-test.properties
+++ b/server/src/test/resources/application-test.properties
@@ -25,6 +25,7 @@ spring.redis.prefix.model_validation='model_validation'
 spring.redis.model_training.page_size=5
 
 spring.data.mongodb.uri=mongodb://admin:admin@172.20.134.249:27017/spring_mongo
+spring.mongodb.download_collection='mongo_save_model'
 spring.mongodb.model_result.page_size=20
 
 springdoc.api-docs.path=/api-docs
@@ -37,7 +38,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 spring.security.secret='SECRET_KEY_VALUE'
 spring.security.cookie='ORCHESTRATOR_COOKIE'
+
+server.port=8090
