--- a/server/pom.xml
+++ b/server/pom.xml
@@ -137,6 +137,13 @@
 			<version>3.4.5</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-inline</artifactId>
+			<version>5.2.0</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
