[fix] bug query + add test case

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -144,6 +144,13 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>de.flapdoodle.embed</groupId>
+			<artifactId>de.flapdoodle.embed.mongo</artifactId>
+			<version>4.20.0</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
