--- a/worker/config.ini
+++ b/worker/config.ini
@@ -9,10 +9,10 @@ password = password
 [kafka]
 host = 172.20.134.249
 port = 9092
-topic_init = 'topic_model_init'
-topic_training = 'topic_model_training'
-topic_validation = 'topic_model_validation'
-topic_end = 'topic_model_end'
+topic_init = topic_model_init
+topic_training = topic_model_training
+topic_validation = topic_model_validation
+topic_end = topic_model_end
 
 [mongodb]
 host = 172.20.134.249
